# gbomb

./: .gitignore  LICENSE  Makefile  README.md  dune-project  gbomb.opam  package.json
esy.lock/: index.json
lib/: client.ml  client.mli  field.ml  field.mli  giantbomb.ml  giantbomb.mli  jbuild  resource.ml  resource.mli
lib/cli/: cli.ml  dune  jbuild
lib/giantbomb/: client.ml  client.mli  dune  giantbomb.ml  giantbomb.mli  jbuild  types.ml  types.mli
src/: cli.ml  dune  jbuild  main.ml
test/: dune  jbuild
