opam-version: "2.0"
name: "gbomb"
version: "0.1.0"
synopsis: "Giant Bomb command line client"
maintainer: "Matt Stobo <mwstobo@gmail.com>"
author: "Matt Stobo <mwstobo@gmail.com>"
license: "MIT"
homepage: "https://github.com/mwstobo/gbomb"
bug-reports: "https://github.com/mwstobo/gbomb"
build: ["dune" "build" "-p" name]
dev-repo: "git+https://github.com/mwstobo/gbomb"
depends: [
  "dune"                { >= "1.9" }
  "lwt"                 { >= "4.2" }
  "lwt_ssl"             { >= "1.1" }
  "cohttp"              { >= "2.1" }
  "cohttp-lwt-unix"     { >= "2.0" }
  "yojson"              { >= "1.7" }
  "qcheck"              { >= "0.9" & with-test }
  "qtest"               { >= "2.9" & with-test }
]
