(rule
 (targets run_tests.ml)
 (deps
  (source_tree ../lib))
 (action
  (system
    "echo -n %{deps} | awk 'BEGIN {RS=\" \"} /.ml$/ { print }' | xargs qtest extract -o %{targets}")))

(executable
 (name run_tests)
 (modules run_tests)
 (libraries qcheck giantbomb cli))

(alias
 (name runtest)
 (deps
  (:< run_tests.exe))
 (action
  (run %{<})))
