(rule
 (targets run_tests.ml)
 (deps
  (source_tree ../lib))
 (action
  (system
    "echo -n %{deps} | awk 'BEGIN {RS=\" \"} /.ml$/ { print }' | grep -v giantbomb | xargs qtest extract -o %{targets}")))

(executable
 (name run_tests)
 (modules run_tests)
 (libraries qcheck cli))

(alias
 (name runtest)
 (deps
  (:< run_tests.exe))
 (action
  (run %{<})))
